# hyperx-saga-control

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_0.30.0.md  RELEASE_NOTES_0.30.1.md  SECURITY.md  install.sh  pyproject.toml  run.sh  uninstall.sh
ISSUE_TEMPLATE/: bug_report.md  device_support.md
capture-kits/ngenuity-feature-capture/: EXPECTED_FILES.txt  Start-SagaProFeatureCapture.py
docs/: INSTALL_LINUX.md  charging-investigation.md  future-capture-guide.md  future-rgb-effects-buttons-macros.md  low-battery-notifications.md  polling-rate-support.md  protocol-notes.md  wireless-polling-findings.md  wireless-polling-notes.md
hyperx_saga_control/: app.py  config.py  protocol.py
packaging/appimage/: build-appimage.sh
packaging/flatpak/: io.github.hyperx_saga_control.yml
screenshots/: README.md
scripts/: check-system.py  diagnose-devices.py  fix-current-permissions.sh  install-hidraw-permissions.sh  install-linux-deps.sh  monitor-charging-status.py  saga-polling-set.py  show-hidraw-permissions.sh
share/applications/: io.github.hyperx_saga_control.desktop.in
share/autostart/: io.github.hyperx_saga_control.desktop.in
share/udev/rules.d/: 60-hyperx-saga-pro.rules  99-hyperx-saga-pro.rules
