[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperx-saga-control"
version = "0.1.0"
description = "Native Linux control app for the HyperX Pulsefire Saga Pro mouse"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "HyperX Saga Control contributors" }
]
keywords = ["hyperx", "hid", "linux", "mouse", "rgb", "dpi", "fedora", "kde"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Hardware",
]
dependencies = [
  "PySide6>=6.6",
]

[project.gui-scripts]
hyperx-saga-control = "hyperx_saga_control.app:main"

[tool.setuptools]
packages = ["hyperx_saga_control"]
